# dining-philosophers

./: README.md  dinphil  dinphil.c
dinphil.dSYM/Contents/: Info.plist
dinphil.dSYM/Contents/Resources/DWARF/: dinphil
older_versions_and_ref/: bug1.rtf  dinphil.c  dinphil_ver1.0.c  general_test.rtf
older_versions_and_ref/pthread_tutorial/: CMakeLists.txt  Makefile  cond  cond.c  count.c  cv-diningPhilosophers  cv-diningPhilosophers.c  diningPhilosophers  diningPhilosophers.c  pthread_counter.c  sum_malloc.c  sum_on_many_threads.c  sum_on_thread.c
older_versions_and_ref/pthread_tutorial/pthread_counter2_orig/: Makefile  pthread_counter  pthread_counter.c
